--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="user_ps_score">Mark :</string>
     <string name="settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="timer">Timer</string>
 
 </resources>
