--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
     <string name="timer">Timer</string>
+    <string name="mainquiz_next">Next</string>
+    <string name="main_logo">Logo comes here</string>
 
 </resources>
