Settings page modified. Auto suggest the name for kutti corrections. :) Else, show hint in a background favourable way.
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="user_ps_score">Mark :</string>
     <string name="settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="timer">Timer</string>
+    <string name="timer">Show Timer</string>
     <string name="mainquiz_next">Next</string>
     <string name="main_logo">Logo comes here</string>
     <string name="settings_name">Name</string>
