Got the delete button for the check question. Need to carry it over to other layouts.
I am going to change the database so this is just the guarantee that
everything is up-to-date.

Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="title_activity_user_landing">User_landing</string>
     <string name="user_lp_cont">Continue</string>
     <string name="user_lp_text">Press Continue to start the test</string>
+    <string name="delete">Delete</string>
+    <string name="admin_check">Check</string>
 
 </resources>
