Settings page made awesome. :) Now, it is compulsory to have a name and id. settingsDBadapter.Name settingsDBadapter.ID contains the details available to the world do set.updatemem() before using them though.
Delete functionality perfected. :)
xml files updated
debugging now has file name specific approach

MainActivity now sees if settings are there and if not takes you there
first.
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="user_lp_text">Press Continue to start the test</string>
     <string name="delete">Delete</string>
     <string name="admin_check">Check</string>
+    <string name="admin_chkq_edh">Type the question no. here</string>
 
 </resources>
