New Database work completed. The qno is now a separate column. Delete in review will not damage the qno structure. :)
Need to add a blob for the image but thats later work. So far good.
Worked on the xml layouts in admin_chk and admin_review and
quest_confirm and changes carried out everywhere.

Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,5 +58,6 @@
     <string name="delete">Delete</string>
     <string name="admin_check">Check</string>
     <string name="admin_chkq_edh">Type the question no.</string>
+    <string name="TextView">TextView</string>
 
 </resources>
