Delete the entire question bank implemented and changes carried over all layouts.
Signed-off-by: bazookan <aby.vinod@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="title_activity_admin_chkq">Admin_chkq</string>
     <string name="admin_chkq_hint">See your question here</string>
     <string name="admin_chkq_title">Type the question no.</string>
-    <string name="admin_base_chkq">Check Question</string>
+    <string name="admin_base_chkq">Review A Question</string>
     <string name="title_activity_user_publish">User_publish</string>
     <string name="user_ps_name">Name      :</string>
     <string name="user_ps_id">ID :</string>
@@ -59,5 +59,6 @@
     <string name="admin_check">Check</string>
     <string name="admin_chkq_edh">Type the question no.</string>
     <string name="TextView">TextView</string>
+    <string name="delete_all">Delete All</string>
 
 </resources>
