Useer Files from Bazooka

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,5 +69,8 @@
     <string name="admin_cp_syllabus">Syllabus :</string>
     <string name="title_activity_admin_crp">Admin_crp</string>
     <string name="admin_cp_date">Set Date</string>
+    <string name="title_activity_user_base">User_base</string>
+    <string name="title_activity_user_score">User_score</string>
+    <string name="title_activity_user_import">User_import</string>
 
 </resources>
