1. Progset will contain pre-processor directives. 	httpdisable disables network requirement. 2. markDBAdapter and markDBhelper keeps track of the scores of the tests taken so far. 3. User_score is the page that displays it in a nice tabular format. 4. User_base doesn't go to user_score unless something is there to display. 5. User_publish updates the scores.
Signed-off-by: root <root@Legacy>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -76,5 +76,7 @@
 	<string name="user_landing_scr">View scores</string>
 	<string name="user_landing_imp">Import a Quiz</string>
 	<string name="admin_base_export">Export the Quiz</string>
+	<string name="clear">Clear</string>
+	
 	
 </resources>
