Previous button installed in the quiz. There were some cursor errors. Hopefully I have ironed them out.
Signed-off-by: root <root@Legacy>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -77,6 +77,6 @@
 	<string name="user_landing_imp">Import a Quiz</string>
 	<string name="admin_base_export">Export the Quiz</string>
 	<string name="clear">Clear</string>
-	
+	<string name="mainquiz_prev">Previous</string>
 	
 </resources>
