1. Closed all cursors after every use to quicken the system. 2. Integrated Ankit's codes but haven't put them to use 3. Previous button installed and ensured working 	1. There are occasional bugs in the scoring where multiple inserts happen for the same question. Kindly watch out. 4. None of the other layouts are updated. Need to update them asap.
Signed-off-by: root <root@Legacy>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -72,11 +72,15 @@
     <string name="title_activity_user_base">User_base</string>
     <string name="title_activity_user_score">User_score</string>
     <string name="title_activity_user_import">User_import</string>
-	<string name="user_landing_take">Take a Quiz</string>
-	<string name="user_landing_scr">View scores</string>
-	<string name="user_landing_imp">Import a Quiz</string>
-	<string name="admin_base_export">Export the Quiz</string>
-	<string name="clear">Clear</string>
-	<string name="mainquiz_prev">Previous</string>
-	
+    <string name="user_landing_take">Take a Quiz</string>
+    <string name="user_landing_scr">View scores</string>
+    <string name="user_landing_imp">Import a Quiz</string>
+    <string name="admin_base_export">Export the Quiz</string>
+    <string name="clear">Clear</string>
+    <string name="mainquiz_prev">Previous</string>
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="mainquiz_img">Image</string>
+    
 </resources>
