1. Import/Export managed by a file manager 2. Check on image size to be introduced (800 kB max) 3. User base now imports quiz via file manager 4. Admin base exports to Nabquiz after creating 	The file name is the quiz name with space removed 5. Admin quest confirm has a pop up to decide if image is to be added. 6. DBAdapter updated for handling the import and export with the manager
Signed-off-by: root <root@Legacy>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="mainquiz_img">Image</string>
-    
+    <string name="title_activity_filepicker">Filepicker</string>
+
 </resources>
