The list of files in the server to download from has been created. It is called from the user base page.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -83,5 +83,6 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="mainquiz_img">Image</string>
     <string name="title_activity_filepicker">Filepicker</string>
+    <string name="title_activity_dblist">DBList</string>
 
 </resources>
