--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Quiz</string>
+    <string name="app_name">Quiz (User Version)</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_admin">Quiz</string>
+    <string name="title_activity_admin">Quiz (User Version)</string>
     <string name="title_activity_mainquiz">Quiz</string>
     <string name="Login">Login</string>
     <string name="Password_hint">Password</string>
