--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Quiz</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_admin">Quiz (User Version)</string>
+    <string name="title_activity_admin">Quiz</string>
     <string name="title_activity_mainquiz">Quiz</string>
     <string name="Login">Login</string>
     <string name="Password_hint">Password</string>
