--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -90,6 +90,8 @@
     <string name="admin_base_delete">Delete the QB</string>
     <string name="admin_base_newdb">Create A New Question Paper</string>
     <string name="settings_url">Localhost URL</string>
+    <string name="settings_gen">Get Password</string>
+    <string name="settings_pass">Password</string>
     <string name="disablehttp">Disable HTTP</string>
     <string name="admin_update">Update</string>
     <string name="connecting">Connecting to the server</string>
